--- a/report.tex
+++ b/report.tex
@@ -6,20 +6,13 @@
 \usepackage{longtable}
 \usepackage{float}
 \usepackage{wrapfig}
-\usepackage{soul}
 \usepackage{textcomp}
-\usepackage{marvosym}
-\usepackage{wasysym}
-\usepackage{latexsym}
-\usepackage{hyperref}
-\usepackage{amssymb}
 \usepackage{hyperref}
 \usepackage[bottom]{footmisc}
 \tolerance=1000
 \usepackage[left=2.35cm, right=3.35cm, top=3.35cm, bottom=3.35cm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[greek,english]{babel}
-\usepackage{graphicx}
 \usepackage{titlesec}
 \usepackage{tocbibind}
 \makeatletter
@@ -39,45 +32,85 @@
 \section*{Question 1: Protein Family}
 \addcontentsline{toc}{section}{Question 1: Protein Family}
 
+\texttt{Q:} Which protein family does the egl-3 encoded protein belong to?
+
 
 \section*{Question 2: Tissues and Gene Expression}
 \addcontentsline{toc}{section}{Question 2: Tissues and Gene Expression} 
+
+\texttt{Q:} In which tissues is egl-3 expressed in C. Elegans?
 
 
 \section*{Question 3: Development stages}
 \addcontentsline{toc}{section}{Question 3: Development stages}
 
+\texttt{Q:} In which developmental stage is the egl-3 expressed?
+
 
 \section*{Question 4: Mutant strains}
 \addcontentsline{toc}{section}{Question 4: Mutant strains}
 
- 
+\texttt{Q:} Are there mutant strains for this gene available? What has
+been mutated in the gene? What is the resulting phenotype?
+
+
 \section*{Question 5: RNA interference phenotype}
 \addcontentsline{toc}{section}{Question : RNA interference phenotype5}
+
+\texttt{Q:} What is the RNA-interference phenotype?
 
 
 \section*{Question 6: RNAi vs Deletion mutant phenotypes}
 \addcontentsline{toc}{section}{Question 6: RNAi vs Deletion mutant phenotypes}
 
+\texttt{Q:} Are there differences between RNAi and deletion mutant
+phenotypes? If yes, explain why this is possible.
+
 
 \section*{Question 7: Orthologous proteins}
 \addcontentsline{toc}{section}{Question 7: Orthologous proteins}
+
+\texttt{Q:} Are there orthologous proteins in:
+\begin{itemize}
+\itemsep0em 
+\item Other nematodes?
+\item Insects?
+\item Vertebrate species (non human)?
+\item Human?
+\item Unicellular organisms?
+\end{itemize}
+Indicate for each of these species the biological process in which the
+protein is involved in and how this function was assessed
 
 
 \section*{Question 8: Function in orthologous genes}
 \addcontentsline{toc}{section}{Question 8: Function in orthologous genes}
 
+\texttt{Q:} Is the function of this orthologous gene in yeast similar
+to its function in C. Elegans?
+
 
 \section*{Question 9: Null mutant in yeast}
 \addcontentsline{toc}{section}{Question 9: Null mutant in yeast}
+
+\texttt{Q:} Is a null mutant for this gene available in yeast? What is
+the phenotype?
 
 
 \section*{Question 10: Scientific information availability}
 \addcontentsline{toc}{section}{10: Scientific information availability}
 
+\texttt{Q:} What is the latest scientific information regarding the
+orthologue of this gene in yeast in relation to cell fusion and the
+process of mating in yeast?
+
 
 \section*{Question 11: Model organism to further study}
 \addcontentsline{toc}{section}{11: Model organism to further study}
+
+\texttt{Q:} Which model organism would you choose to further study
+this gene and why?
+
 
 \bibliographystyle{plain} \bibliography{bib-db}
 \end{document}
