--- a/title.tex
+++ b/title.tex
@@ -13,10 +13,10 @@
     
     % Author
     \begin{minipage}{0.4\textwidth}
-      \begin{flushleft} \large
+      \begin{center} \large
         \emph{Author:}\\
         Cedric \textsc{Lood}\\
-      \end{flushleft}
+      \end{center}
     \end{minipage}
     
     \vfill
