--- a/report.tex
+++ b/report.tex
@@ -97,7 +97,7 @@ may be functionally well conserved. You may also know of partner
 interactions in one MO and search for those in the other MO.
 
 \section*{Question 5: RNA interference phenotypes}
-\addcontentsline{toc}{section}{Question : RNA interference phenotypes}
+\addcontentsline{toc}{section}{Question 5: RNA interference phenotypes}
 
 \texttt{Q:} What is the RNA-interference phenotype?
 \smallskip
